--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,24 @@ footer {
   font-family: 'Indie Flower', cursive;
 
 }
+.button-container{
+  display: inline-flex;
+  margin-left: 40%;
+  text-align: center;
+  padding: 1px;
 
-.form {
-  padding: 10px 50px;
+  
 }
-.formdesign {
-  width: 30%;
-  padding: 15px;
+button{
+  display: block;
+  height: 50px;
+  width: 130px;
+  border: 2px solid;
+  font-size: 23px;
+  border-radius: 8px;
+  margin-left: 30%;
+  margin-top: 20px;
+  font-family: 'Indie Flower', cursive;
 }
+
+
